--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,14 @@
         }
     ],
     "require": {
-        "johnbillion/extended-cpts": "^5.0"
+        "johnbillion/extended-cpts": "^5.0",
+        "knplabs/github-api": "^3.0",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "http-interop/http-factory-guzzle": "^1.0"
+    },
+    "config": {
+        "allow-plugins": {
+            "php-http/discovery": true
+        }
     }
 }
